--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- Download button -->
-<a href="path_to_your_file.pdf" download="filename.pdf">
+<a href="BoudyCalculator.exe" download="BoudyCalculator.exe">
   <button>Download File</button>
 </a>
 
